--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==1.1.2
-Jinja2==2.11.3
+Flask==3.0.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 Werkzeug==1.0.1
 numpy==1.22.2
 opencv-python==4.5.3.56
