--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
- {
-     "builds": [
-         {
-             "src": "api/app.py",
-             "use": "@vercel/python"
-         }
-     ],
-     "routes": [
-         {
-             "src": "/(.*)",
-             "dest": "api/app.py"
-         }
-     ]
- }
-
+{
+  "builds": [
+    {
+      "src": "api/app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/app.py"
+    }
+  ],
+  "build": {
+    "commands": [
+      "apt-get update",
+      "apt-get install -y ffmpeg libsm6 libxext6"
+    ]
+  }
+}
