--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,148 @@
+absl-py==2.0.0
+anyio==4.0.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+args==0.1.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.13.1
+beautifulsoup4==4.12.2
+bleach==6.1.0
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+clint==0.5.1
+colorama==0.4.6
+comm==0.2.0
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+executing==2.0.1
+fastjsonschema==2.19.0
 Flask==3.0.0
+flatbuffers==23.5.26
+floyd-cli==0.11.17
+fqdn==1.5.1
+gast==0.5.4
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-pasta==0.2.0
+grpcio==1.59.3
+h5py==3.10.0
+idna==3.4
+imageio==2.33.0
+ipykernel==6.27.0
+ipython==8.17.2
+ipywidgets==8.1.1
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.0
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_server==2.11.0
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.9
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+jupyterlab_server==2.25.2
+keras==2.15.0
+lazy_loader==0.3
+libclang==16.0.6
+Markdown==3.5.1
 MarkupSafe==2.1.3
-Werkzeug==3.0.1
+marshmallow==2.21.0
+matplotlib-inline==0.1.6
+mistune==3.0.2
+ml-dtypes==0.2.0
+nbclient==0.9.0
+nbconvert==7.11.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
+networkx==3.2.1
+notebook==7.0.6
+notebook_shim==0.2.3
 numpy==1.26.2
-opencv-python-headless==4.8.1.78
+oauthlib==3.2.2
+opencv-python==4.8.1.78
+opt-einsum==3.3.0
+overrides==7.4.0
+packaging==23.2
+pandocfilters==1.5.0
+parso==0.8.3
+pathlib2==2.3.7.post1
+Pillow==10.1.0
+platformdirs==4.0.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.41
+protobuf==4.23.4
+psutil==5.9.6
+pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+Pygments==2.17.2
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3.post1
+pywin32==306
+pywinpty==2.0.12
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.5.1
+QtPy==2.4.1
+raven==6.10.0
+referencing==0.31.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.13.1
+rsa==4.9
+scikit-image==0.22.0
+scipy==1.11.4
+Send2Trash==1.8.2
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.3
+tabulate==0.9.0
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+terminado==0.18.0
+tifffile==2023.9.26
+tinycss2==1.2.1
+tornado==6.3.3
+traitlets==5.13.0
+types-python-dateutil==2.8.19.14
+typing_extensions==4.8.0
+uri-template==1.3.0
+urllib3==2.1.0
+wcwidth==0.2.12
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.4
+Werkzeug==3.0.1
+wget==3.2
+widgetsnbextension==4.0.9
+wrapt==1.14.1
