--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,24 @@
 {
-  "builds": [
-    {
-      "src": "api/app.py",
-      "use": "@vercel/python"
+  "functions": {
+    "api/app.py": {
+      "runtime": "python3.9",
+      "memory": 1024
     }
-  ],
-  "routes": [
+  },
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "api/app.py"
+      "source": "/static/(.*)",
+      "destination": "/api/static/$1"
+    },
+    {
+      "source": "/templates/(.*)",
+      "destination": "/api/templates/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/api/app.py"
     }
-  ],
+  ]
 }
+
 
