--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,14 @@
-{
-  "functions": {
-    "api/app.py": {
-      "runtime": "python3.9",
-      "memory": 1024
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/static/(.*)",
-      "destination": "/api/static/$1"
-    },
-    {
-      "source": "/templates/(.*)",
-      "destination": "/api/templates/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/api/app.py"
-    }
-  ]
-}
+ {
+     "builds": [
+         {
+             "src": "api/app.py",
+             "use": "@vercel/python"
+         }
+     ],
+     "routes": [
+         {
+             "src": "/(.*)",
+             "dest": "api/app.py"
+         }
+     ]
+ }
