--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask==3.0.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 numpy==1.26.2
-opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78
 Werkzeug==3.0.1
