--- a/vercel.json
+++ b/vercel.json
@@ -11,4 +11,13 @@
              "dest": "api/app.py"
          }
      ]
+     "build": {
+       "functions": {
+         "api/app.py": {
+           "runtime": "@vercel/python",
+           "memory": 1024
+         }
+       },
+       "script": "./vercel-build.sh"  // Path to your custom build script
+     }
  }
