--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,6 @@
            "memory": 1024
          }
        },
-       "script": "./vercel-build.sh"  // Path to your custom build script
+       "script": "./vercel-build.sh"  
      }
  }
